[tool.poetry]
name = "moosecap"
version = "0.1.1"
description = "MooseJudge Capacity Model"
authors = ["Chuck Mo <chuck@moosejudge.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pony = "^0.7.13"
pip = "^20.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
mkdocs = "^1.1.2"

[tool.poetry.scripts]
modb = 'moosecap.db.console:modb'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
